--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,13 @@
+/* Firefox default 0.5em auto -> reduce for small screen*/
+@media screen and (max-width: 600px)  { 
+  hr {margin: 0.1em auto; }
+}
+
+@media screen and (max-width: 600px) {
+  figcaption {
+    font-size: small;
+}
+  }
 .dl {
   margin: 5px;
 }
