--- a/static/styles.css
+++ b/static/styles.css
@@ -43,7 +43,8 @@
   .column {
     float: left;
     width: 33.33%;
-    padding: 5px;
+    padding: 0px 5px;
+    text-align: justify;
   }
   
   /* Clear floats after the columns */
@@ -72,6 +73,7 @@
     font-size: x-large;
     /* font-weight: bold; */
     color: darkblue;
+    margin-top: 0px;
   }
   
   @media screen and (max-width: 600px) {
