--- a/static/styles.css
+++ b/static/styles.css
@@ -3,6 +3,7 @@
   font-weight: bold;
   /* text-decoration-line: underline; */
 }
+
 /* Firefox default 0.5em auto -> reduce for small screen*/
 @media screen and (max-width: 600px)  { 
   hr {margin: 0.1em auto; }
@@ -44,7 +45,7 @@
   .column {
     float: left;
     width: 33.33%;
-    padding: 0px 5px;
+    padding: 0px 1rem;
     text-align: justify;
   }
   
