--- a/static/styles.css
+++ b/static/styles.css
@@ -25,8 +25,8 @@
  }
 } 
 @media only screen{
-  .noprint,
-  .noScreen{display:none;}
+  .noScreen{
+    display:none;}
 }
 @media screen {
   .noScreen {
